[package]
name = "ci_cap_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arithmetic-parser = "0.3.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }
futures-util = "0.3.28"
log = "0.4.17"
pretty_env_logger = "0.5.0"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
warp = "0.3.5"
